# ml-ops-v2

./: .gitignore  hello.py  main.py  pyproject.toml
dagster-demo/: README.md  pyproject.toml
dagster-demo/cache/history/: runs.db
dagster-demo/cache/history/runs/: index.db
dagster-demo/cache/schedules/: schedules.db
dagster-demo/dagster_demo/: assets.py
dagster-demo/dagster_demo.egg-info/: PKG-INFO  SOURCES.txt
lecture-examples/: sample_assets.py  sample_definitions.py
mobilephones/: README.md  pyproject.toml  setup.cfg  setup.py
mobilephones/mobilephones/: assets.py  definitions.py
mobilephones/mobilephones.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mobilephones/src/data/: load_data.py  preprocess.py
mobilephones/src/features/: build_features.py
mobilephones/src/models/: evaluate_model.py  predict.py
src/models/: train_model.py
